Sass语法 - 基础语法.md 更新

--- a/Sass/基础语法.md
+++ b/Sass/基础语法.md
@@ -1,11 +1,12 @@
-Sass 使用说明
+
+toc
 
 # 1、 FIS3 中集成 Sass
 
 ## 1.1 插件安装
 
 * sass 编译 `npm i fis3-parser-node-sass -g`
-* 前缀添加 `npm i fis-preprocessor-cssprefixer -g` 必须全局安装
+* 前缀添加 `npm i fis3-preprocessor-cssprefixer -g` 必须全局安装
 
 ```javascript
 fis.match('*.scss', {
@@ -58,7 +59,7 @@ fis.match('*.scss', {
 ### 1.3.2 Sass 属性声明顺序
 
 * z-index, display
-* position, left, top, right
+* position, left, top, right, bottom
 * overflow, float, clear
 * margin, padding
 * background, border
@@ -68,10 +69,10 @@ fis.match('*.scss', {
 ### 1.3.2 Sass 使用规则
 
 * 当前选择器的样式属性
-* 父级选择器的伪类选择器 (:first-letter, :hover, :active)
-* 伪类元素 (:before and :after)
-* 父级选择器的声明样式 (.selected, .active, .enlarged)
-* 用Sass的上下文媒体查询
+* 父级选择器的伪类选择器 (`:first-letter`, `:hover`, `:active`)
+* 伪类元素 (`:before`、`:after`)
+* 父级选择器的声明样式 (`.selected`, `.active`, `.enlarged`)
+* 用 Sass 的上下文媒体查询
 * 子选择器作为最后的部分
 
 
@@ -79,26 +80,28 @@ fis.match('*.scss', {
 
 ### 2.1 后缀名
 
-* Sass文件后缀名可为 .scss、 .sass
-* 推荐使用 .scss，与 css 语法完全兼容
-* 不推荐使用 .sass 要求更严格，不能使用 {} 和 ;
+* Sass文件后缀名可为 `.scss`、 `.sass`
+* 推荐使用 `.scss`，与 `css` 语法完全兼容
+* 不推荐使用 `.sass` 要求更严格，不能使用 `{}` 和 `;`
 
 ### 2.2 文件导入
 
-* 可在 Sass 文件中导入 Sass 文件或 css 文件 （对于 Sass 文件可不写后缀名）
+* 可在 `Sass` 文件中导入 `Sass` 文件或 `css` 文件 （对于 `Sass` 文件可不写后缀名）
 * 基础文件以 _ 开头，如变量声明、混入等，（导入时可不写下划线）
-* @import "page/page1"
-* @import "lib/bootstrap.css"
+
+> 示例：
+> * `@import "page/page1"`
+> * `@import "lib/bootstrap.css"`
 
 
 ### 2.3 变量
 
-* 使用 $ 声明并使用变量
-* 变量可被覆盖（就近原则或在变量后面添加 !default）
+* 使用 `$` 声明并使用变量
+* 变量可被覆盖（就近原则或在变量后面添加 `!default`）
 * 变量可为全局或局部 （在选择器外部声明、选择器内部声明）
-* 当变量为字符串时，可在类名、属性名中引用，如 border-#{$variableName}
-* 变量为 list 结构 （在 $size: 18px 30px 34px 使用 nth($size, 1) 调用）
-* 变量为 map 结构（使用 @each $key, $value in $map 调用）
+* 当变量为字符串时，可在类名、属性名中引用，如 `border-#{$variableName}`
+* 变量为 list 结构 （在 `$size: 18px 30px 34px` 使用 `nth($size, 1)` 调用）
+* 变量为 map 结构（使用 `@each $key, $value in $map` 调用）
 
 ```scss
 $gray: #666 !default;
@@ -124,11 +127,11 @@ body {
 }
 ```
 
-2.4嵌套
+### 2.4 嵌套
 
 * 可使用选择器嵌套、属性嵌套 （属性嵌套并没什么用）
-* @at-root 可跳出所有的上级选择器 （可同时对过个选择器操作）
-* #{&}__modifer 可实现 BEM 特性
+* `@at-root` 可跳出所有的上级选择器 （可同时对过个选择器操作）
+* `#{&}__modifer` 可实现 BEM 特性
 
 ```scss
 // 编译前的 scss 文件
@@ -176,8 +179,9 @@ body {
 
 ### 2.4 占位选择器
 
-* 使用 % 声明占位， 通过 @extend 调用
+* 使用 `%` 声明占位选择器， 通过 `@extend` 调用占位选择器
 * 当占位选择器没被调用时，不会被解析出来 （推荐使用）
+* 占位选择器可以用其定义一些基础的样式文件
 
 ```scss
 // 编译前的 scss 文件
@@ -186,7 +190,7 @@ body {
     font-size: 10px;
 }
 
-.child1 {
+.child-1 {
     @extend %my-sty;
 }
 ```
@@ -199,10 +203,90 @@ body {
 }
 ```
 
-### 2.5 混合
+### 2.5 继承
 
+说明：继承是建立在语义化的关系上。当一个元素拥有的类（如 `.seriousError` ）表明它属于另一个类（如 `.error`），此时适合用继承
+
+* 使用 `%extend` 进行继承
+* 可以继承任何定义给单个元素的选择器，比如 `.special.cool`、`a:hover`
+
+```scss
+// 编译前
+a:hover {
+    text-decoration: underline;
+}
+.hoverlink {
+    @extend a: hover;
+}
+```
+
+```scss
+// 编译后
+a:hover, .hoverlink {
+  text-decoration: underline;
+}
+```
+
+```scss
+// 编译前
+.error {
+    border: 1px #f00;
+    background-color: #fdd;
+}
+.seriousError {
+    @extend .error;
+    border-width: 3px;
+}
+```
+
+```scss
+// 编译后
+.error, .seriousError {
+  border: 1px #f00;
+  background-color: #fdd;
+}
+
+.seriousError {
+  border-width: 3px;
+}
+```
+
+```scss
+// 编译前
+.error {
+    border: 1px #f00;
+    background-color: #fdd;
+}
+.error.intrusion {
+    background-image: url("/image/hacked.png");
+}
+.seriousError {
+    @extend .error;
+    border-width: 3px;
+}
+```
+
+```scss
+// 编译后
+.error, .seriousError {
+    border: 1px #f00;
+    background-color: #fdd;
+}
+.error.intrusion, .intrusion.seriousError {
+    background-image: url("/image/hacked.png");
+}
+.seriousError {
+    border-width: 3px;
+}
+```
+
+### 2.6 混合
+
+说明：混合指令用于定义可重复的样式，避免使用无语义的 `class`，如 `.clearfix`、`.float-left`
+
+* 使用 `@mixin` 声明混合指令，通过` @include` 调用混合指令
 * 当混合没被调用时，不会被解析出来 （推荐使用）
-* 使用 @mixin 声明，通过 @include 调用
+* 混合样式中也可以嵌套其他混合样式
 * 当混合为无参时，推荐使用占位选择器来实现
 
 ```scss
@@ -244,10 +328,38 @@ body {
 }
 ```
 
-### 2.6 函数
+```scss
+// 编译前
+@mixin height-light {
+	background: #fc0;
+}
 
-* 使用 @fuction funName (param) {} 声明，通过 funName() 调用
-* 可使用 sass 自带的函数，如 lighten()、darken() 等
+@mixin head-text {
+	font-size: 24px;
+}
+
+@mixin computed {
+	@include height-light;
+	@include head-text;
+}
+
+span {
+	@include computed
+}
+```
+
+```scss
+// 编译后
+span {
+    background: #fc0;
+    font-size: 24px;
+}
+```
+
+### 2.7 函数
+
+* 使用 `@fuction funName (param) {}` 声明，通过 `funName()` 调用
+* 可使用 `sass` 自带的函数，如 `lighten()`、`darken()` 等
 
 ```scss
 // 编译前的 scss 文件
@@ -282,13 +394,13 @@ body {
 }
 ```
 
-### 2.7 其他
+### 2.8 其他
 
 * 运算 可对遍历、数值、像素、颜色等进行四则运算（操作符前后需要空格）
 * 三目运算 条件为真/假时，返回不同的值 （与函数有点类似）
-* @if 条件成立后执行 {} 内的语句
-* @each 遍历 list 变量、map 变量
-* @for 在指定数值范围内遍历
+* `@if` 条件成立后执行 `{}` 内的语句
+* `@each` 遍历 `list` 变量、`map` 变量
+* `@for` 在指定数值范围内遍历
 
 ```scss
 // sass 运算、 @if、三目运算 示例
@@ -322,9 +434,7 @@ $level: 2;
 ```scss
 // @each 示例
 // 编译前的 scss 文件
-$animal-list: puma,
-sea-slug,
-egret;
+$animal-list: puma, sea-slug, egret;
 @each $animal in $animal-list {
     .#{$animal}-icon {
         background-image: url('/images/#{$animal}.png');
