--- a/d3.js/选择集.md
+++ b/d3.js/选择集.md
@@ -1,42 +1,60 @@
 # 选择集
 
-## 元素选择 
+### 选择器
+`d3.select()` 与 `jQuery` 的选择器类似，支持各种 CSS3 选择器，并能通过各种条件筛选（实际上使用的是浏览器提供的查询方法 `document.querySelector()`）
+
+### 元素选择 
 说明：`d3.select()`、`d3.selectAll()` 返回值是一组选择，该选择是一组元素。D3 绑定额外的方法到该数组上（在该对象与数组间添加了一层原型链 `d3.selection.prototype`），可以在选中的元素上应用操作，例如为所有选中的元素设置属性值。
 
 > `d3.select()` 、`d3.selectAll()` 返回一个选集 selection，它是 D3 操作 DOM 的入口
 > `selection.data()` 操作的结果是 update 选择，这表示选择的 DOM 元素已成功绑定到指定的数据元素。update 选择还包含对 enter 和 exit 的选择。
 
-#### 选择集（`selectoin`）
-* selectoin.select(selector): 选中第一个目标元素
-* selectoin.selectAll(selector): 选中所有符合的目标元素
+#### 选择集（`selection`）
 
-> 说明：当没有任何元素符合条件时，方法返回的是一个空的选择结果（selection）
+* selection.select(selector): 选中第一个目标元素
+* selection.selectAll(selector): 选中所有符合的目标元素
+* selection.append(name)
+* selection.insert(name, before)
+* selection.remove()
+* selection.empty()
+* selection.filter(filter)
+* selection.attr(name, value)：获取、设置元素的属性
+* selection.style(name, value, priority)：获取、设置元素的 CSS 样式
+* selection.classed(name, value)：获取、设置元素的 `class` 属性，可以对象的方式一次传入多个属性，
+* selection.property(name, value)：获取、设置元素的 `prop` 特性，如是否被选中、value 等信息
+* selection.html(value)：用来获取或设置选定元素的 HTML
+* selection.text(value)：用来获取或设置选定元素的文本内容
+* selection.size()
+* selection.node()(type, listener, capture)
 
-* selectoin.append(name)
-* selectoin.insert(name, before)
-* selectoin.remove()
-* selectoin.empty()
-* selectoin.filter(filter)
-* selectoin.style(name, value, priority)
-* selectoin.classed(name, value)
-* selectoin.attr(name, value)
-* selectoin.property(name, value)
-* selectoin.html(value)
-* selectoin.text(value)
-* selectoin.size()
-* selectoin.node()(type, listener, capture)
+> **说明**
+> * 当没有任何元素符合条件时，方法返回的是一个空的选择结果（selection）
+> * 这些函数可用于单个元素以及多个元素，当应用于多元素选集时，这些函数会依次作用于其中每个元素
+> * `attr()`、`text()` 等方法中中赋值时可使用函数，如 `function (data, i) { console.log(this); }` ，其中 `data` 指每一项数据，`i` 指索引，`this` 指当前 DOM 元素
+> * selection 选择集的 `select`、`append`、`insert`函数会返回一个新的选集，建议用缩进来区别应用于不同选集上的级联函数，如下所示：
 
-> 说明：`attr()`、`text()`中赋值时可使用函数，如 `function (data, i) { console.log(this); }` ，其中 `data` 指每一项数据，`i` 指索引，`this` 指当前 DOM 元素
+```javascript
+d3.select('.rect-test')
+    .attr('fill', 'red')
+.selectAll('text')
+    .attr('x', 100)
+    .attr('y', 100);
+```
 
-* data(value, key) 连接指定的一组数据的和当前选择
-* datum(value) 获取或设置每个选定的元素绑定的数据，不计算一个连接（因此不计算 enter 和 exit 的选择）
-* each(callback) 对当前指定的每个元素进行处理
-* sort(comparator) 根据指定的 comparator 函数对当前选择的元素排序
-* order() 重新插入元素到文档，使文档顺序选与择顺序就相匹配
-* call(callback) 调用指定函数，并返回当前选择（方便链式调用）
+* selection.data(value, key) 连接指定的一组数据的和当前选择，**key** 函数可以被指定为控制数据是如何连接元素
+    * 没有 key 函数时，默认使用 index 连接元素，即用 index 判断 `enter`、`update` 和  `exit` 选择集
+    * 有 key 函数时，用 key 函数的返回值连接元素，有利于复用 DOM 元素（与 Vue 中的 `v-key` 相似）
+* selection.datum(value) 获取或设置每个选定的元素绑定的数据，不计算一个连接（因此不计算 enter 和 exit 的选择）
+* selection.each(callback) 遍历集合中的每个元素
+* selection.sort(comparator) 根据指定的 comparator 函数对当前选择的元素排序
+* selection.order() 重新插入元素到文档，使文档顺序选与择顺序就相匹配
+* selection.call(callback) 调用指定函数，并返回当前选择（方便链式调用）
     * `svg.append('g').call(axis)` 与 `axis(svg.append('g'))` 作用一样;
-* interrupt(name) 立即中断当前的过渡
-* transition(name) 为当前选择添加过渡效果
+* selection.interrupt(name) 立即中断当前的过渡
+* selection.transition(name) 为当前选择添加过渡效果
+
+说明：
+* 所有绑定了数据的父元素，其子元素均具有从父元素那里继承下来的值。
 
 ```html
 <!DOCTYPE html>
