--- a/D3.js/比例尺.md
+++ b/D3.js/比例尺.md
@@ -2,26 +2,126 @@
 
 说明：任何数据集中的值都不太可能完全对应于可视化中使用的像素测量值。比例提供了一种方便的方法，将这些数据值映射为可用于可视化目的的新值。
 
-d3.scale
+`d3.scale`
 
 > 数据集中的数据其实是通过映射成一个个坐标点后在页面中绘制出来的，而数据可能会很大或很小，所以需要将数值进行映射以适配 SVG 容器的大小
 
-d3.scale.linear - 构建一个线性比例尺。
-d3.scale.ordinal - 构造一个序数比例尺。
-d3.scale.identity - 构建一个线性恒等比例尺。
-d3.scale.log - 构建一个对数比例尺。
-d3.scale.pow - 构建一个指数比例尺。
-d3.scale.quantile - 构建一个分位数比例尺。
-d3.scale.quantize - 构建一个量化比例尺（值域离散）。
-d3.scale.sqrt - 构建一个平方根比例尺。
-d3.scale.threshold - 构建一个临界值比例尺（值域离散）。
+* scale.copy: 创建比例尺的副本。
+* scale.interpolate: 取得或设置比例尺的输出插值器。
+* scale.invert: 取得给定输出值对应定义域中的值。
+* scale.nice: 扩展比例尺的定义域为一个优化的整数值。
+* scale.tickFormat: 取得用于展示刻度值的格式化器。
+* scale.ticks: 取得定义域中有代表性的值。
+
+### 插值器
+给定函数 `f(x)` 在 `x0, x1,...,xn` 处的值。现有 `x'`，其值在上述取值点间。那么，求 `f(x')`值的过程叫做 **插值**
+
+插值不仅在尺度功能的实现中非常重要，对于 D3 的其他核心功能的实现也不可或缺，例如，动画和布局管理功能。因而 D3 设计了一个独立、可重用的插值
+器，以便在实现其他功能时提供统一的调用方式。（默认的范围域是 `[0, 1]`）
+
+* d3.interpolate: 返回一个介于 a 和 b 之间的默认插值器(`a`、`b`可为对象，包含多个属性，使用复合尺度插值时，D3 会遍历对象中的所有成员，并对其每一个组成部分应用相应的简单插值规则)
+* d3.interpolateNumber: 插补两个数字值
+* d3.interpolateString: 插补两个字符串
+* d3.interpolateArray: 插补两个数组
+* d3.interpolateHcl: 插补两个 HCL 颜色值
+* d3.interpolateHsl: 插补两个 HSL 颜色值
+* d3.interpolateLab: 插补两个 `L * a * b *` 颜色值
+* d3.interpolateObject: 插补两个任意对象
+* d3.interpolateRgb: 插补两个RGB颜色值
+* d3.interpolateRound: 插补两个整数
+* d3.interpolateTransform: 插补两个 2D 矩阵变换
+* d3.interpolateZoom: 在两个点之间平滑地缩放平移
+
+```js
+var interpolate = d3.interpolateNumber(0, 100);
+interpolate(0.1);  // 10
+interpolate(0.99); // 99
+
+// 使用 d3.interpolateNumber 函数创建了一个值域为 [0, 100] 的interpolate函数，并使用这个函数对指定的数字进行插值。该函数与如下代码是等价的。
+// function interpolate(t){
+//     return a * (1 - t) + b * t;
+// }
+
+```
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    </style>
+</head>
+
+<body>
+    <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
+    <script>
+        let w = 600;
+        let h = 400;
+        let start = {
+            'font-size': '12px',
+            color: '#f00'
+        };
+        let end = {
+            'font-size': '40px',
+            color: '#ff0'
+        };
+
+        let svg = d3.select('body')
+            .append('svg')
+            .attr('width', w)
+            .attr('height', h);
+            
+        let interpolate = d3.interpolate(start, end);
+        let groups = svg.append('g');
+
+        for (let i = 1; i < 10; i++) {
+            let info = interpolate(i / 10);
+            groups.append('text')
+                .text(i)
+                .attr('x', 0 + i * 24)
+                .attr('y', 40),
+                .attr('class', 'text-list')
+                .style('fill', info.color)
+                .style('font-size', info['font-size']);
+        }
+    </script>
+</body>
+
+</html>
+```
+
+## 类别
+* 数值尺度
+    * d3.scale.linear: 线性比例尺 （`f(n) = kx + b`）
+        * d3.time.scale: 线性时间比例尺
+    * d3.scale.pow: 指数比例尺 （`f(n) = a * n ^ 2 + b`）
+        * pow.exponent(k) 用于设置二项式系数 a 的值，默认为 1
+    * d3.scale.log: 对数比例尺（`f(n) = a * log(n) + b`）
+        * log.base(base) : 设置这个对数比例尺的底数，默认是 10
+    * d3.scale.quantize: 量化比例尺（定义域是连续的，值域是离散）
+    * d3.scale.identity: 线性恒等比例尺
+    * d3.scale.quantile: 分位数比例尺
+    * d3.scale.sqrt: 平方根比例尺
+    * d3.scale.threshold: 临界值比例尺（值域离散）
+* 有序尺度
+    * d3.scale.ordinal: 序数比例尺 （key、value 映射，无具体表达式）
+    * d3.scale.category10: 该比例尺中有默认的值域中有 10 种颜色
+    * d3.scale.category20: 该比例尺中有默认的值域中有 20 种颜色
+    * d3.scale.category20b: 该比例尺中有默认的值域中有 20 种颜色
+    * d3.scale.category20c: 该比例尺中有默认的值域中有 20 种颜色
+
 
 ## 线性比例尺
 
 说明：将输入域映射到连续的输出范围，类似 `y=kx+b` 线性函数，如将身高映射成柱状图的高度（像素），`let linear = d3.scale.linear()`
 
-> 线性比例尺的默认输入域 [0, 1]，默认输出范围为 [0, 1]，此时为恒等函数
-> 比例尺只是定义了一个映射规则，映射的输入值并不局限于 `domain()` 中的输入域
+> * 线性比例尺的默认输入域 [0, 1]，默认输出范围为 [0, 1]，此时为恒等函数
+> * 比例尺只是定义了一个映射规则，映射的输入值并不局限于 `domain()` 中的输入域
 
 * `linear(x)`：在输入域中的输入 x，返回输出范围对应的值。
 * `linear.domain([min, max])`：指定输入域范围
@@ -30,7 +130,12 @@ d3.scale.threshold - 构建一个临界值比例尺（值域离散）。
 
 ## 时间比例尺
 
-`let timeScale = d3.time.scale()` 
+说明：`d3.time.scale` 是 `d3.scale.linear` 比例尺的扩展，使用 Javascript 的 `Date` 对象作为其输入域 `domain`，`let time = d3.time.scale()` 
+
+* `time`: 取得给定定义域中值对应的输出范围中的值。
+* `time.domain`: 取得或设置比例尺度的定义域。
+* `time.rangeRound`: 设置比例尺的四舍五入输出范围。
+* `time.range`：取得或设置比例尺的输出范围。
 
 
 ## 序号比例尺
@@ -39,8 +144,52 @@ d3.scale.threshold - 构建一个临界值比例尺（值域离散）。
 
 * `ordinal(x)`：在输入域中的输入 x，返回输出范围对应的值。
 * `ordinal.domain([a, b, ..., x])`：指定输入域范围（一系列离散的数据）
-* `ordinal.range([min, max])`：指定输出范围
+* `ordinal.range([k1, k2, ..., kn])`：如果指定了输出范围，设置当前比例尺对象的输出范围为指定的 values 数组，如果 values 中的值的个数少于输入域中元素的个数，那么 values 中的值会被循环使用。（主要用于颜色）
 * `ordinal.rangePoints([min, max], padding)`：指定输出范围为一个连续的区间，第一个位置和最后一个位置会因为入参 padding 的值而做相应，消减长度是padding 个间隔长度的一半；默认情况下 padding 是 0 
-* `rdinal.rangeRoundPoints([min, max], padding)`：功能同 `ordinal.rangePoints`，但是该函数可以美化输出的刻度点，即保证整数
 * `ordinal.rangeBands([min, max], padding, outerPadding)`：该函数是将区间切分成一个个小的区间段，而不是一个个刻度点（刻度在坐标轴中间，而不是在起点，适用于柱状图）
+* `rdinal.rangeRoundPoints([min, max], padding)`：功能同 `ordinal.rangePoints`，但是该函数可以美化输出的刻度点，即保证整数
 * `ordinal.rangeRoundBands([min, max], padding, outerPadding)` 功能同 `ordinal.rangeBands`，但是该函数可以美化输出的区间段，即保证每个区间段的起点值都是整数
+
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    </style>
+</head>
+
+<body>
+    <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
+    <script>
+        let w = 800;
+        let h = 400;
+        let padding = 40;
+        let dateRange = [new Date(2017, 0, 1), new Date(2018, 2, 1)];
+
+        let svg = d3.select('body')
+            .append('svg')
+            .attr('width', w)
+            .attr('height', h);
+
+        let xScale = d3.time.scale()
+            .domain(dateRange)
+            .rangeRound([padding, w - padding]);
+
+        let axis = d3.svg.axis()
+            .scale(xScale)
+            .tickFormat(d3.time.format('%m-%d'));
+
+        svg.append('g')
+            .attr('class', 'x-axis')
+            .call(axis);
+    </script>
+</body>
+
+</html>
+```
