--- a/source/_posts/D3.js/工具函数.md
+++ b/source/_posts/D3.js/工具函数.md
@@ -1,3 +1,12 @@
+---
+title: 工具函数
+categories: [D3.js]
+tags: [D3.js]
+date: 2021-03-24
+---
+
+# 工具函数
+
 ### 数组
 * d3.range([start, ]stop[, step]): 生成一个包含算数级数的数组
 * d3.shuffle(): 随机化一个数组的顺序
