--- a/source/_posts/D3.js/比例尺.md
+++ b/source/_posts/D3.js/比例尺.md
@@ -1,3 +1,10 @@
+---
+title: 比例尺
+categories: [D3.js]
+tags: [D3.js]
+date: 2021-03-24
+---
+
 # 比例尺
 
 说明：任何数据集中的值都不太可能完全对应于可视化中使用的像素测量值。比例提供了一种方便的方法，将这些数据值映射为可用于可视化目的的新值。
