feat: 算法题更新

--- a/source/_posts/JavaScript/原型链与继承.md
+++ b/source/_posts/JavaScript/原型链与继承.md
@@ -310,3 +310,7 @@ E.foo(); // "P.foo"
 * `Object.prototype.isPrototypeOf()`：测试一个对象是否存在于另一个对象的原型链上，与 `instanceof` 作用类似
 * `fon ... in ...`：以任意顺序遍历一个对象的可枚举属性（包括原型链上的属性，主要用于 Object 对象）
 * `fon ... of ...`：在可迭代对象(包括 `Array`, `Map`, `Set`, `String`, `arguments` 对象等)上创建一个迭代循环，遍历每个属性值
+
+
+相关文章
+[JavaScript 继承](https://github.com/ljianshu/Blog/issues/20)
