--- a/source/_posts/JavaScript/语法.md
+++ b/source/_posts/JavaScript/语法.md
@@ -27,6 +27,19 @@ a = b = c = 42;
 // 最后是 a = 42 （副作用是将 a 赋值 42 ）
 ```
 
+```js
+var a = { n: 1 };
+var b = a;
+a.x = a = { n: 2 };
+
+console.log(a.x); // undefined
+console.log(b.x); // { n: 2 }
+
+// --- 解释 ---
+// 赋值操作是从右至左的，但 `.` 的优先级比 `=` 高
+// 对于第三行代码，会先执行 a.x，即给 `{ n: 1 }` 对象新增一个 x 属性，然后执行 `a = { n: 2 }` 后 a 指向新对象 `{ n: 2 }`，且此操作的返回值为 `{ n: 2 }`，最后再执行 `a.x = _result_` 时，并不会重新解析一遍 `a`，而是沿用最初的解析 `{ n: 1 }` ，故旧对象 `{ n: 1 }` 的 `x` 属性的值为 `{ n: 2 }`
+```
+
 ### 3. 标签语句
 
 标签语句：实现类似 `goto` 的功能，用于控制循环的跳转（并不推荐使用）
