--- a/source/_posts/Web 安全/点击劫持.md
+++ b/source/_posts/Web 安全/点击劫持.md
@@ -20,6 +20,7 @@ date: 2021-01-14 15:40:00
 在响应头或 `meta` 标签中使用 `X-Frame-Options`
 1. 可以在响应头中添加，如 `X-Frame-Options: DENY`
 2. 可以在 HTML 的 `meta` 标签中添加，如 `<meta http-equiv="X-Frame-Options" content="deny">`
+3. 通过 JS 代码来判断，如果窗口是顶层窗口，则正常显示，否则不显示，例如判断 `window.top === window.self`
 
 
 **`X-Frame-Options` 有三个值:**
@@ -27,3 +28,5 @@ date: 2021-01-14 15:40:00
 * SAMEORIGIN: 表示该页面可以在相同域名页面的 frame 中展示。
 * ALLOW-FROM uri: 表示该页面可以在指定来源的 frame 中展示。
 
+参考
+* [常见 web 安全问题](https://github.com/ljianshu/Blog/issues/56)
