feat: 算法笔记更新

--- a/source/_posts/JavaScript 编程题/数组操作.md
+++ b/source/_posts/JavaScript 编程题/数组操作.md
@@ -53,3 +53,24 @@ var flatten = (arr) => {
 var arr = [1, [2, 3], [4, [5, 6]], 7]
 console.log(flatten(arr)); // [ 1, 2, 3, 4, 5, 6, 7 ] 
 ```
+
+### 2. 数组去重
+
+```js
+// 常规方式
+const unique = (arr) => {
+  const res = [];
+
+  arr.forEach(item => {
+    if (!res.includes(item)) res.push(item);
+  });
+
+  return res;
+}
+
+// 利用数组自带的 api
+const unique = (arr) => arr.filter((item, index, array) => array.indexOf(item) === index);
+
+// 使用 Set
+const unique = (arr) => [...new Set(arr)]
+```
