--- a/source/_posts/JavaScript/数据类型与类型转换.md
+++ b/source/_posts/JavaScript/数据类型与类型转换.md
@@ -72,6 +72,20 @@ toString.call([1,2,3]); // [object Array]
 
 ```
 
+```js
+// 实现 typeof 函数判断所有数据类型
+const typeOf = (obj) => {
+  const regex = /\[object\s(.+)]/;
+  const objStr = Object.prototype.toString.call(obj);
+  const res = objStr.match(regex);
+  console.log(res);
+
+  if (!res || !res[1]) throw new Error('typeof error');
+
+  return res[1].toLowerCase();
+}
+```
+
 ###### 1.1.4 其他 API 
 
 **Array.isArray()** 用于判断某个数据是否为数组，
