--- a/source/_posts/算法题/技巧篇 - 双指针.md
+++ b/source/_posts/算法题/技巧篇 - 双指针.md
@@ -27,6 +27,7 @@ date: 2021-05-24 16:32:28
 * 两数之和（求有序数组中和为 target 的两个数）
 * 反转数组
 * 有效三角形的个数
+* 有序数组合并
 
 ### 2.1 有效三角形的个数
 
@@ -159,4 +160,77 @@ function triangleNumber(nums) {
 
   return count
 }
+```
+
+### 2.2 合并两个有序数组
+
+**描述：**
+给你两个有序整数数组 nums1 和 nums2，请你将 nums2 合并到 nums1 中，使 nums1 成为一个有序数组。
+
+初始化 nums1 和 nums2 的元素数量分别为 m 和 n 。你可以假设 nums1 的空间大小等于 m + n，这样它就有足够的空间保存来自 nums2 的元素。
+
+**示例：**
+示例 1：
+输入：nums1 = [1,2,3,0,0,0], m = 3, nums2 = [2,5,6], n = 3
+输出：[1,2,2,3,5,6]
+
+示例 2：
+输入：nums1 = [1], m = 1, nums2 = [], n = 0
+输出：[1]
+
+```js
+/**
+ * --- 需要定义一个临时的数组，是因为如果赋值到 nums1 上，则 nums1 上的元素会被覆盖 ---
+ * 设置 i,j 两个指针指向两个数组，初始位置都为 0，
+ * 逐次比较 nums1[i]、nums2[j]，将较小的数放入 res 数组中，
+ * 如果某项数组已处理完成，则将另一个数组的数据放入 res 中
+*/
+var merge = function(nums1, m, nums2, n) {
+  let res = [];
+
+  let i = 0;
+  let j = 0;
+  let target;
+  
+  while(i < m || j < n) {
+    if (i === m) {
+      target = nums2[j++];
+    } else if (i === n) {
+      target = nums1[i++];
+    } else if (nums1[i] < nums2[j]) {
+      target = nums1[i++];
+    } else {
+      target = nums2[j++];
+    }
+
+    res[i + j - 1] = target;
+  }
+  
+  nums1 = res;
+
+  return nums1;
+};
+```
+
+
+```js
+/**
+ * --- 如果从后往前依次放入，则 nums1 中的元素不会被覆盖 ---
+*/
+var merge = function(nums1, m, nums2, n) {
+  let i = m - 1;
+  let j = n - 1;
+  
+  while(i >= 0 || j >= 0) {
+    let index = i + j + 1;
+    
+    if (j === -1 || nums1[i] >= nums2[j]) {
+      nums1[index] = nums1[i--];
+    } else {
+      nums1[index] = nums2[j--];
+    }
+  }
+
+  return nums1;
+};
 ```
